update id of elements in Layout files to support software testing with robot framework and appium libraries.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#FF0000</color>
     <color name="gray">#EEEEEE</color>
+    <color name="yellow">#C3BA70</color>
 </resources>
